edit bg-image-01 and header-main title

--- a/css/main.css
+++ b/css/main.css
@@ -780,12 +780,12 @@ p:last-child {
 
 /* Images */
 .bg-image-01:before {
-  background: url(../media/bg/image-01@2x.jpg);
+  background: url(../media/bg/meditation.jpg);
 }
 
 @media only screen and (max-width: 479px) {
   .bg-image-01:before {
-    background: url(../media/bg/image-01.jpg);
+    background: url(../media/bg/meditation.jpg);
   }
 }
 
