improve more contents

--- a/css/main.css
+++ b/css/main.css
@@ -2311,7 +2311,7 @@ table td {
 
 /* -----------------------------------------------------------------------------
 
-# Pages - Style Guide
+# Pages - Design System
 
 ----------------------------------------------------------------------------- */
 .page-style-guide table th:first-child {
