--- a/css/main.css
+++ b/css/main.css
@@ -905,7 +905,7 @@ p:last-child {
 }
 
 .min-width-l {
-  min-width: 1200px;
+  min-width: auto;
 }
 
 /* -----------------------------------------------------------------------------
