--- a/css/main.css
+++ b/css/main.css
@@ -353,7 +353,8 @@ p:last-child {
 
 @media only screen and (max-width: 479px) {
   .lead {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
+    font-weight: 500;
     line-height: 2rem;
   }
 }
